# wise-weasel

./: README.md  TODO  pyproject.toml
tests/: conftest.py  test_actlist.py  test_gamelist.py
wise_weasel/: __init__.py  act_list.py  game_list.py  model.py  puzzle_list.py
wise_weasel/static/: style.css
wise_weasel/templates/: act_list.html.j2  game_list.html.j2  layout.html.j2  puzzle_list.html.j2
