[tool.poetry]
name = "wise-weasel"
version = "0.1.0"
description = ""
authors = ["Harald Krämer <tetha42@gmail.com>"]
readme = "README.md"
packages = [{include = "wise_weasel"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flask-pytest = "^0.0.5"
black = "^23.3.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
